--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
+monitor_speed = 115200
 lib_deps = 
 	adafruit/Adafruit MCP4725@^2.0.2
 	bblanchon/ArduinoJson@^7.3.1
